optimize code. add admin endpoint